@@ -7,9 +7,14 @@ import taskmanager.app.entity.Task;
 import taskmanager.app.exception.ValidationException;
 import taskmanager.app.management.TaskManager;
 import taskmanager.app.service.history.InMemoryHistoryManager;
+import taskmanager.app.service.time.TimeManagerService;
 import taskmanager.app.util.StatusCheckResult;
 
+import java.time.Duration;
+import java.time.LocalDateTime;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 /**
  * TaskManager
@@ -20,33 +25,162 @@ public class InMemoryTaskManager implements TaskManager {
     protected final Map<Integer, Task> tasks = new HashMap<>();
     protected final Map<Integer, Epic> epics = new HashMap<>();
     protected final Map<Integer, SubTask> subTasks = new HashMap<>();
+    private final AtomicInteger nextId = new AtomicInteger(1);
     private final InMemoryHistoryManager historyManager = new InMemoryHistoryManager();
     private final ValidationException validator = new ValidationException();
-    private int nextId = 1;
+    final Set<Task> prioritizedTasks = new TreeSet<>(Comparator.comparing(
+            Task::getStartTime,
+            Comparator.nullsLast(Comparator.naturalOrder())
+    ).thenComparing(Task::getId));
+    private final TimeManagerService timeManager;
+
+    public InMemoryTaskManager() {
+        this.timeManager = new TimeManagerService();
+    }
 
     /**
-     * Восстанавливает задачу напрямую в карту задач.
-     * Используется для восстановления состояния менеджера.
+     * Возвращает задачи в порядке приоритета (по startTime)
+     */
+    public List<Task> getPrioritizedTasks() {
+        return prioritizedTasks.stream()
+                .sorted(Comparator.comparing(
+                        Task::getStartTime,
+                        Comparator.nullsLast(Comparator.naturalOrder())
+                ).thenComparing(Task::getId))
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * Обновляет время эпика на основе его подзадач
+     */
+    public void updateEpicTime(int epicId) {
+        Epic epic = epics.get(epicId);
+        if (epic == null) {
+            return;
+        }
+
+        prioritizedTasks.remove(epic);
+
+        if (epic.getSubTaskIds().isEmpty()) {
+            epic.setStartTime(null);
+            epic.setDuration(null);
+            epic.setEndTime(null);
+            return;
+        }
+
+        LocalDateTime earliestStart = null;
+        LocalDateTime latestEnd = null;
+        Duration totalDuration = Duration.ZERO;
+        boolean hasTimeData = false;
+
+        for (int subtaskId : epic.getSubTaskIds()) {
+            SubTask subtask = subTasks.get(subtaskId);
+            if (subtask != null && subtask.getStartTime() != null && subtask.getDuration() != null) {
+                hasTimeData = true;
+
+                if (earliestStart == null || subtask.getStartTime().isBefore(earliestStart)) {
+                    earliestStart = subtask.getStartTime();
+                }
+
+                LocalDateTime subtaskEnd = subtask.getEndTime();
+                if (latestEnd == null || subtaskEnd.isAfter(latestEnd)) {
+                    latestEnd = subtaskEnd;
+                }
+
+                totalDuration = totalDuration.plus(subtask.getDuration());
+            }
+        }
+
+        if (hasTimeData) {
+            epic.setStartTime(earliestStart);
+            epic.setDuration(totalDuration);
+            epic.setEndTime(latestEnd);
+            if (epic.getStartTime() != null) {
+                prioritizedTasks.add(epic);
+            }
+        } else {
+            epic.setStartTime(null);
+            epic.setDuration(null);
+            epic.setEndTime(null);
+        }
+    }
+
+    /**
+     * Проверяет пересечение задачи с другими задачами по времени
+     */
+    private void checkForTimeOverlaps(Task taskToCheck) {
+        if (taskToCheck.getStartTime() == null || taskToCheck.getDuration() == null) {
+            return;
+        }
+
+        for (Task existingTask : prioritizedTasks) {
+            if (existingTask.getId() != taskToCheck.getId() &&
+                    existingTask.getStartTime() != null &&
+                    existingTask.getDuration() != null &&
+                    isTasksOverlap(taskToCheck, existingTask)) {
+                throw new RuntimeException("Задача '" + taskToCheck.getName() +
+                        "' пересекается по времени с задачей '" + existingTask.getName() + "'");
+            }
+        }
+    }
+
+    /**
+     * Проверяет пересечение двух задач по времени
+     */
+    public boolean isTasksOverlap(Task task1, Task task2) {
+        LocalDateTime start1 = task1.getStartTime();
+        LocalDateTime end1 = task1.getEndTime();
+        LocalDateTime start2 = task2.getStartTime();
+        LocalDateTime end2 = task2.getEndTime();
+
+        if (start1 == null || end1 == null || start2 == null || end2 == null) {
+            return false;
+        }
+
+        return !start1.isEqual(end2) && !start2.isEqual(end1) &&
+                start1.isBefore(end2) && start2.isBefore(end1);
+    }
+
+    private void validateTaskTime(Task task) {
+        timeManager.validateTaskTime(task);
+        checkForTimeOverlaps(task);
+    }
+
+    private void addTaskToTimeSlots(Task task) {
+        timeManager.addTaskToTimeSlots(task);
+    }
+
+    private void removeTaskFromTimeSlots(Task task) {
+        timeManager.removeTaskFromTimeSlots(task);
+    }
+
+    /**
+     * Восстанавливает задачу напрямю в карту задач.
      *
      * @param task задача для восстановления
      */
     protected void restoreTaskDirectly(Task task) {
         tasks.put(task.getId(), task);
+        if (task.getStartTime() != null) {
+            prioritizedTasks.add(task);
+            addTaskToTimeSlots(task);
+        }
     }
 
     /**
      * Восстанавливает эпик напрямую в карту эпиков.
-     * Используется для восстановления состояния менеджера.
      *
      * @param epic эпик для восстановления
      */
     protected void restoreEpicDirectly(Epic epic) {
         epics.put(epic.getId(), epic);
+        if (epic.getStartTime() != null) {
+            prioritizedTasks.add(epic);
+        }
     }
 
     /**
-     * Восстанавливает эпик напрямую в карту эпиков.
-     * Используется для восстановления состояния менеджера.
+     * Восстанавливает подзадачу напрямую в карту подзадач.
      *
      * @param subTask подзадача для восстановления
      */
@@ -55,6 +189,12 @@ public class InMemoryTaskManager implements TaskManager {
         Epic epic = epics.get(subTask.getEpicId());
         if (epic != null) {
             epic.addSubTaskId(subTask.getId());
+            updateEpicStatus(epic.getId());
+            updateEpicTime(epic.getId());
+        }
+        if (subTask.getStartTime() != null) {
+            prioritizedTasks.add(subTask);
+            addTaskToTimeSlots(subTask);
         }
     }
 
@@ -64,7 +204,6 @@ public class InMemoryTaskManager implements TaskManager {
      * @param task задача для создания (не может быть null)
      *
      * @return id созданной задачи
-     *
      */
     @Override
     public int createTask(Task task) {
@@ -72,10 +211,25 @@ public class InMemoryTaskManager implements TaskManager {
         if (task.getId() == 0) {
             task.setId(generateId());
         }
-        validator.validateTaskForCreation(task, tasks.values());
-        tasks.put(task.getId(), task);
-        afterTaskCreation(task);
-        return task.getId();
+
+        try {
+            validateTaskTime(task);
+            validator.validateTaskForCreation(task, tasks.values());
+            tasks.put(task.getId(), task);
+            if (task.getStartTime() != null) {
+                prioritizedTasks.add(task);
+                addTaskToTimeSlots(task);
+            }
+            afterTaskCreation(task);
+            return task.getId();
+        } catch (RuntimeException e) {
+            if (tasks.containsKey(task.getId())) {
+                tasks.remove(task.getId());
+                prioritizedTasks.remove(task);
+                removeTaskFromTimeSlots(task);
+            }
+            throw e;
+        }
     }
 
     /**
@@ -84,17 +238,22 @@ public class InMemoryTaskManager implements TaskManager {
      * @param epic эпик для создания (не может быть null)
      *
      * @return id созданного эпика
-     *
      */
     @Override
     public int createEpic(Epic epic) {
         if (epic.getId() == 0) {
             epic.setId(generateId());
         }
-        validator.validateForEpicCreation(epic);
-        epics.put(epic.getId(), epic);
-        afterEpicCreation(epic);
-        return epic.getId();
+
+        try {
+            validator.validateForEpicCreation(epic);
+            epics.put(epic.getId(), epic);
+            afterEpicCreation(epic);
+            return epic.getId();
+        } catch (RuntimeException e) {
+            epics.remove(epic.getId());
+            throw e;
+        }
     }
 
     /**
@@ -103,7 +262,6 @@ public class InMemoryTaskManager implements TaskManager {
      * @param subTask подзадача для создания (не может быть null)
      *
      * @return id созданной подзадачи
-     *
      */
     @Override
     public int createSubTask(SubTask subTask) {
@@ -115,15 +273,40 @@ public class InMemoryTaskManager implements TaskManager {
             throw new IllegalArgumentException("Подзадача не может быть своим же эпиком");
         }
 
-        validator.validateForSubTaskCreation(subTask, epics);
+        try {
+            validateTaskTime(subTask);
+            validator.validateForSubTaskCreation(subTask, epics);
 
-        subTasks.put(subTask.getId(), subTask);
-        Epic epic = epics.get(subTask.getEpicId());
-        epic.addSubTaskId(subTask.getId());
-        updateEpicStatus(subTask.getEpicId());
+            subTasks.put(subTask.getId(), subTask);
+            Epic epic = epics.get(subTask.getEpicId());
+            if (epic != null) {
+                epic.addSubTaskId(subTask.getId());
+                updateEpicStatus(subTask.getEpicId());
+                updateEpicTime(subTask.getEpicId());
+            }
 
-        afterSubTaskCreation(subTask);
-        return subTask.getId();
+            if (subTask.getStartTime() != null) {
+                prioritizedTasks.add(subTask);
+                addTaskToTimeSlots(subTask);
+            }
+
+            afterSubTaskCreation(subTask);
+            return subTask.getId();
+        } catch (RuntimeException e) {
+            if (subTasks.containsKey(subTask.getId())) {
+                subTasks.remove(subTask.getId());
+                prioritizedTasks.remove(subTask);
+                removeTaskFromTimeSlots(subTask);
+
+                Epic epic = epics.get(subTask.getEpicId());
+                if (epic != null) {
+                    epic.removeSubTaskId(subTask.getId());
+                    updateEpicStatus(epic.getId());
+                    updateEpicTime(epic.getId());
+                }
+            }
+            throw e;
+        }
     }
 
     /**
@@ -144,14 +327,12 @@ public class InMemoryTaskManager implements TaskManager {
      * @throws IllegalArgumentException если id не положительный
      */
     @Override
-    public Task getTaskById(int id) {
+    public Optional<Task> getTaskById(int id) {
         validator.validatePositiveId(id);
-        Task task = tasks.get(id);
-        if (task != null) {
-            historyManager.add(task);
-            return new Task(task);
-        }
-        return null;
+        Optional<Task> taskOptional = Optional.ofNullable(tasks.get(id));
+
+        taskOptional.ifPresent(historyManager::add);
+        return taskOptional.map(Task::new);
     }
 
     /**
@@ -172,13 +353,14 @@ public class InMemoryTaskManager implements TaskManager {
      * @throws IllegalArgumentException если id не положительный
      */
     @Override
-    public Epic getEpicById(int id) {
+    public Optional<Epic> getEpicById(int id) {
         validator.validatePositiveId(id);
-        Epic epic = epics.get(id);
-        if (epic != null) {
-            historyManager.add(epic);
-        }
-        return epic != null ? new Epic(epic) : null;
+
+        return Optional.ofNullable(epics.get(id))
+                .map(epic -> {
+                    historyManager.add(epic);
+                    return new Epic(epic);
+                });
     }
 
     /**
@@ -193,17 +375,17 @@ public class InMemoryTaskManager implements TaskManager {
     @Override
     public List<SubTask> getSubTasksByEpicId(int epicId) {
         validator.validatePositiveId(epicId);
-        Epic epic = epics.get(epicId);
-        validator.validateEpicExist(epics, epicId);
 
-        List<SubTask> result = new ArrayList<>();
-        for (int subtaskId : epic.getSubTaskIds()) {
-            SubTask subTask = subTasks.get(subtaskId);
-            if (subTask != null) {
-                result.add(new SubTask(subTask));
-            }
-        }
-        return List.copyOf(result);
+        return Optional.ofNullable(epics.get(epicId))
+                .map(epic -> {
+                    validator.validateEpicExist(epics, epicId);
+                    return epic.getSubTaskIds().stream()
+                            .map(subTasks::get)
+                            .filter(Objects::nonNull)
+                            .map(SubTask::new)
+                            .collect(Collectors.toList());
+                })
+                .orElse(Collections.emptyList());
     }
 
     /**
@@ -224,13 +406,13 @@ public class InMemoryTaskManager implements TaskManager {
      * @throws IllegalArgumentException если id не положительный
      */
     @Override
-    public SubTask getSubTaskById(int id) {
+    public Optional<SubTask> getSubTaskById(int id) {
         validator.validatePositiveId(id);
-        SubTask subTask = subTasks.get(id);
-        if (subTask != null) {
-            historyManager.add(subTask);
-        }
-        return subTask != null ? new SubTask(subTask) : null;
+        return Optional.ofNullable(subTasks.get(id))
+                .map(subTask -> {
+                    historyManager.add(subTask);
+                    return new SubTask(subTask);
+                });
     }
 
     /**
@@ -245,27 +427,104 @@ public class InMemoryTaskManager implements TaskManager {
      * Обновляет задачу
      *
      * @param task с обновленными данными
-     *
      */
     @Override
     public void updateTask(Task task) {
         validator.validateTaskForUpdate(task, tasks);
-        tasks.put(task.getId(), new Task(task));
-        afterTaskUpdate(task);
+        Task oldTask = tasks.get(task.getId());
+
+        if (oldTask != null) {
+            prioritizedTasks.remove(oldTask);
+            removeTaskFromTimeSlots(oldTask);
+        }
+
+        try {
+            validateTaskTime(task);
+            tasks.put(task.getId(), task);
+            if (task.getStartTime() != null) {
+                prioritizedTasks.add(task);
+                addTaskToTimeSlots(task);
+            }
+        } catch (Exception e) {
+            if (oldTask != null) {
+                tasks.put(oldTask.getId(), oldTask);
+                if (oldTask.getStartTime() != null) {
+                    prioritizedTasks.add(oldTask);
+                    addTaskToTimeSlots(oldTask);
+                }
+            }
+            throw new RuntimeException("Ошибка при обновлении задачи " + task.getId(), e);
+        } finally {
+            try {
+                afterTaskUpdate(task);
+            } catch (Exception e) {
+                System.err.println("Ошибка в afterTaskUpdate для задачи " + task.getId() + ": " + e.getMessage());
+            }
+        }
     }
 
     /**
      * Обновляет подзадачу
      *
      * @param subTask с обновленными данными
-     *
      */
     @Override
     public void updateSubTask(SubTask subTask) {
         validator.validateSubTaskForUpdate(subTask, subTasks, epics);
-        subTasks.put(subTask.getId(), subTask);
-        updateEpicStatus(subTask.getEpicId());
-        afterSubTaskUpdate(subTask);
+
+        SubTask oldSubTask = subTasks.get(subTask.getId());
+        Epic oldEpic = oldSubTask != null ? epics.get(oldSubTask.getEpicId()) : null;
+
+        if (oldSubTask != null) {
+            prioritizedTasks.remove(oldSubTask);
+            removeTaskFromTimeSlots(oldSubTask);
+
+            if (oldSubTask.getEpicId() != subTask.getEpicId() && oldEpic != null) {
+                oldEpic.removeSubTaskId(oldSubTask.getId());
+                updateEpicStatus(oldEpic.getId());
+                updateEpicTime(oldEpic.getId());
+            }
+        }
+
+        try {
+            validateTaskTime(subTask);
+            subTasks.put(subTask.getId(), subTask);
+
+            Epic newEpic = epics.get(subTask.getEpicId());
+            if (newEpic != null) {
+                if (oldSubTask == null || oldSubTask.getEpicId() != subTask.getEpicId()) {
+                    newEpic.addSubTaskId(subTask.getId());
+                }
+                updateEpicStatus(newEpic.getId());
+                updateEpicTime(newEpic.getId());
+            }
+
+            if (subTask.getStartTime() != null) {
+                prioritizedTasks.add(subTask);
+                addTaskToTimeSlots(subTask);
+            }
+        } catch (Exception e) {
+            if (oldSubTask != null) {
+                subTasks.put(oldSubTask.getId(), oldSubTask);
+                if (oldSubTask.getStartTime() != null) {
+                    prioritizedTasks.add(oldSubTask);
+                    addTaskToTimeSlots(oldSubTask);
+                }
+
+                if (oldEpic != null && (oldSubTask.getEpicId() != subTask.getEpicId())) {
+                    oldEpic.addSubTaskId(oldSubTask.getId());
+                    updateEpicStatus(oldEpic.getId());
+                    updateEpicTime(oldEpic.getId());
+                }
+            }
+            throw new RuntimeException("Ошибка при обновлении подзадачи " + subTask.getId(), e);
+        } finally {
+            try {
+                afterSubTaskUpdate(subTask);
+            } catch (Exception e) {
+                System.err.println("Ошибка в afterSubTaskUpdate для подзадачи " + subTask.getId() + ": " + e.getMessage());
+            }
+        }
     }
 
     /**
@@ -274,12 +533,32 @@ public class InMemoryTaskManager implements TaskManager {
      */
     @Override
     public void deleteAllTasks() {
-        Set<Integer> taskIds = new HashSet<>(tasks.keySet());
-        tasks.clear();
-        for (Integer id : taskIds) {
-            historyManager.remove(id);
+        try {
+            tasks.values().forEach(task -> {
+                try {
+                    prioritizedTasks.remove(task);
+                    removeTaskFromTimeSlots(task);
+                } catch (Exception e) {
+                    System.err.println("Ошибка при удалении задачи из приоритетных/временных слотов: " + e.getMessage());
+                }
+            });
+
+            Set<Integer> taskIds = new HashSet<>(tasks.keySet());
+            tasks.clear();
+            taskIds.forEach(id -> {
+                try {
+                    historyManager.remove(id);
+                } catch (Exception e) {
+                    System.err.println("Ошибка при удалении задачи " + id + " из истории: " + e.getMessage());
+                }
+            });
+        } finally {
+            try {
+                afterAllTasksDeletion();
+            } catch (Exception e) {
+                System.err.println("Ошибка в afterAllTasksDeletion: " + e.getMessage());
+            }
         }
-        afterAllTasksDeletion();
     }
 
     /**
@@ -289,25 +568,68 @@ public class InMemoryTaskManager implements TaskManager {
      */
     @Override
     public void deleteTaskById(int id) {
-        validator.validatePositiveId(id);
-        tasks.remove(id);
-        historyManager.remove(id);
-        afterTaskDeletion(id);
+        try {
+            validator.validatePositiveId(id);
+            Task task = tasks.get(id);
+            if (task != null) {
+                try {
+                    prioritizedTasks.remove(task);
+                    removeTaskFromTimeSlots(task);
+                } catch (Exception e) {
+                    System.err.println("Ошибка при удалении задачи из приоритетных/временных слотов: " + e.getMessage());
+                }
+
+                tasks.remove(id);
+
+                try {
+                    historyManager.remove(id);
+                } catch (Exception e) {
+                    System.err.println("Ошибка при удалении задачи " + id + " из истории: " + e.getMessage());
+                }
+            }
+        } finally {
+            try {
+                afterTaskDeletion(id);
+            } catch (Exception e) {
+                System.err.println("Ошибка в afterTaskDeletion: " + e.getMessage());
+            }
+        }
     }
 
     /**
      * Удаляет все эпики.
      * Очищает историю для эпиков и подзадач
      */
-    @Override
     public void deleteAllEpics() {
-        Set<Integer> epicIds = new HashSet<>(epics.keySet());
-        epics.clear();
-        for (Integer id : epicIds) {
-            historyManager.remove(id);
+        try {
             deleteAllSubTasks();
+
+            epics.values().forEach(epic -> {
+                try {
+                    if (epic.getStartTime() != null) {
+                        prioritizedTasks.remove(epic);
+                    }
+                } catch (Exception e) {
+                    System.err.println("Ошибка при удалении эпика из приоритетных задач: " + e.getMessage());
+                }
+            });
+
+            Set<Integer> epicIds = new HashSet<>(epics.keySet());
+            epics.clear();
+            epicIds.forEach(id -> {
+                try {
+                    historyManager.remove(id);
+                } catch (Exception e) {
+                    System.err.println("Ошибка при удалении эпика " + id + " из истории: " + e.getMessage());
+                }
+            });
+        } finally {
+            try {
+                afterAllEpicsDeletion();
+            } catch (Exception e) {
+                System.err.println("Ошибка в afterAllEpicsDeletion: " + e.getMessage());
+            }
         }
-        afterAllEpicsDeletion();
     }
 
     /**
@@ -319,15 +641,51 @@ public class InMemoryTaskManager implements TaskManager {
     public void deleteEpicById(int id) {
         validator.validatePositiveId(id);
         Epic epic = epics.get(id);
-        validator.validateEpicExist(epics, id);
 
-        for (int subtaskId : epic.getSubTaskIds()) {
-            subTasks.remove(subtaskId);
-            historyManager.remove(subtaskId);
+        if (epic == null) {
+            throw new IllegalArgumentException("Эпик с id " + id + " не существует");
         }
-        historyManager.remove(id);
-        epics.remove(id);
-        afterEpicDeletion(id);
+
+        List<Integer> subTaskIds = new ArrayList<>(epic.getSubTaskIds());
+        boolean deletionFailed = false;
+
+        try {
+            for (int subtaskId : subTaskIds) {
+                try {
+                    deleteSubTaskById(subtaskId);
+                } catch (Exception e) {
+                    deletionFailed = true;
+                    System.err.println("Ошибка при удалении подзадачи " + subtaskId + ": " + e.getMessage());
+                }
+            }
+
+            try {
+                if (epic.getStartTime() != null) {
+                    prioritizedTasks.remove(epic);
+                }
+            } catch (Exception e) {
+                System.err.println("Ошибка при удалении эпика из приоритетных задач: " + e.getMessage());
+            }
+
+            try {
+                historyManager.remove(id);
+            } catch (Exception e) {
+                System.err.println("Ошибка при удалении эпика " + id + " из истории: " + e.getMessage());
+            }
+
+            epics.remove(id);
+
+        } finally {
+            try {
+                afterEpicDeletion(id);
+            } catch (Exception e) {
+                System.err.println("Ошибка в afterEpicDeletion: " + e.getMessage());
+            }
+        }
+
+        if (deletionFailed) {
+            throw new RuntimeException("Не все подзадачи были удалены успешно");
+        }
     }
 
     /**
@@ -336,19 +694,43 @@ public class InMemoryTaskManager implements TaskManager {
      */
     @Override
     public void deleteAllSubTasks() {
-        Set<Integer> subTaskIds = new HashSet<>(subTasks.keySet());
+        try {
+            subTasks.values().forEach(subTask -> {
+                try {
+                    prioritizedTasks.remove(subTask);
+                    removeTaskFromTimeSlots(subTask);
+                } catch (Exception e) {
+                    System.err.println("Ошибка при удалении подзадачи из приоритетных/временных слотов: " + e.getMessage());
+                }
+            });
 
-        subTasks.clear();
+            Set<Integer> subTaskIds = new HashSet<>(subTasks.keySet());
+            subTasks.clear();
 
-        for (Integer id : subTaskIds) {
-            historyManager.remove(id);
+            for (Integer id : subTaskIds) {
+                try {
+                    historyManager.remove(id);
+                } catch (Exception e) {
+                    System.err.println("Ошибка при удалении подзадачи " + id + " из истории: " + e.getMessage());
+                }
+            }
+
+            for (Epic epic : epics.values()) {
+                try {
+                    epic.clearSubTaskIds();
+                    updateEpicStatus(epic.getId());
+                    updateEpicTime(epic.getId());
+                } catch (Exception e) {
+                    System.err.println("Ошибка при обновлении эпика " + epic.getId() + ": " + e.getMessage());
+                }
+            }
+        } finally {
+            try {
+                afterAllSubTasksDeletion();
+            } catch (Exception e) {
+                System.err.println("Ошибка в afterAllSubTasksDeletion: " + e.getMessage());
+            }
         }
-
-        for (Epic epic : epics.values()) {
-            epic.clearSubTaskIds();
-            updateEpicStatus(epic.getId());
-        }
-        afterAllSubTasksDeletion();
     }
 
     /**
@@ -358,18 +740,42 @@ public class InMemoryTaskManager implements TaskManager {
      */
     @Override
     public void deleteSubTaskById(int id) {
-        validator.validatePositiveId(id);
-        SubTask subTask = subTasks.get(id);
-        if (subTask != null) {
-            subTasks.remove(id);
+        try {
+            validator.validatePositiveId(id);
+            SubTask subTask = subTasks.get(id);
+            if (subTask != null) {
+                try {
+                    prioritizedTasks.remove(subTask);
+                    removeTaskFromTimeSlots(subTask);
+                } catch (Exception e) {
+                    System.err.println("Ошибка при удалении подзадачи из приоритетных/временных слотов: " + e.getMessage());
+                }
 
-            Epic epic = epics.get(subTask.getEpicId());
-            if (epic != null) {
-                epic.removeSubTaskId(id);
-                updateEpicStatus(epic.getId());
+                subTasks.remove(id);
+
+                Epic epic = epics.get(subTask.getEpicId());
+                if (epic != null) {
+                    try {
+                        epic.removeSubTaskId(id);
+                        updateEpicStatus(epic.getId());
+                        updateEpicTime(epic.getId());
+                    } catch (Exception e) {
+                        System.err.println("Ошибка при обновлении эпика " + epic.getId() + ": " + e.getMessage());
+                    }
+                }
+
+                try {
+                    historyManager.remove(id);
+                } catch (Exception e) {
+                    System.err.println("Ошибка при удалении подзадачи " + id + " из истории: " + e.getMessage());
+                }
             }
-            historyManager.remove(id);
-            afterSubTaskDeletion(id);
+        } finally {
+            try {
+                afterSubTaskDeletion(id);
+            } catch (Exception e) {
+                System.err.println("Ошибка в afterSubTaskDeletion: " + e.getMessage());
+            }
         }
     }
 
@@ -378,7 +784,12 @@ public class InMemoryTaskManager implements TaskManager {
      */
     @Override
     public int generateId() {
-        return nextId++;
+        try {
+            return nextId.getAndIncrement();
+        } catch (Exception e) {
+            System.err.println("Ошибка при генерации ID: " + e.getMessage());
+            throw new RuntimeException("Не удалось сгенерировать ID", e);
+        }
     }
 
     protected void afterSubTaskDeletion(int subTaskId) {
@@ -411,19 +822,17 @@ public class InMemoryTaskManager implements TaskManager {
      * @param epicId id эпика
      */
     private void updateEpicStatus(int epicId) {
-        Epic epic = epics.get(epicId);
-        if (epic == null) {
-            return;
-        }
+        Optional.ofNullable(epics.get(epicId))
+                .ifPresent(epic -> {
+                    List<Integer> subtaskIds = epic.getSubTaskIds();
+                    if (subtaskIds.isEmpty()) {
+                        setEpicStatus(epic, StatusTask.NEW);
+                        return;
+                    }
 
-        List<Integer> subtaskIds = epic.getSubTaskIds();
-        if (subtaskIds.isEmpty()) {
-            setEpicStatus(epic, StatusTask.NEW);
-            return;
-        }
-
-        StatusCheckResult statusCheck = checkSubTasksStatuses(subtaskIds);
-        determineEpicStatus(epic, statusCheck);
+                    StatusCheckResult statusCheck = checkSubTasksStatuses(subtaskIds);
+                    determineEpicStatus(epic, statusCheck);
+                });
     }
 
     /**
@@ -444,22 +853,20 @@ public class InMemoryTaskManager implements TaskManager {
      * @return результат проверки
      */
     private StatusCheckResult checkSubTasksStatuses(List<Integer> subtaskIds) {
+        List<StatusTask> statuses = subtaskIds.stream()
+                .map(subTasks::get)
+                .filter(Objects::nonNull)
+                .map(SubTask::getStatus)
+                .toList();
+
+        boolean allNew = statuses.stream().allMatch(status -> status == StatusTask.NEW);
+        boolean allDone = statuses.stream().allMatch(status -> status == StatusTask.DONE);
+        boolean hasInProgress = statuses.stream().anyMatch(status -> status == StatusTask.IN_PROGRESS);
+
         StatusCheckResult result = new StatusCheckResult();
-
-        for (int subtaskId : subtaskIds) {
-            SubTask subTask = subTasks.get(subtaskId);
-            if (subTask == null) {
-                continue;
-            }
-
-            StatusTask status = subTask.getStatus();
-            if (status == StatusTask.IN_PROGRESS) {
-                result.setHasInProgress(true);
-                return result;
-            }
-            result.setAllNew(result.isAllNew() && (status == StatusTask.NEW));
-            result.setAllDone(result.isAllDone() && (status == StatusTask.DONE));
-        }
+        result.setAllNew(allNew);
+        result.setAllDone(allDone);
+        result.setHasInProgress(hasInProgress);
 
         return result;
     }
